# tempura_old

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  create_opengl_link_file.py
engine/: CMakeLists.txt
engine/temp/: tempura.h
engine/temp/core/: assertion.h  container.h  container_allocator.h  core.h  define.h  filesystem.h  format.h  logger.cpp  logger.h  task_manager.cpp  task_manager.h  type.h
engine/temp/core/allocator/: allocator.h  allocator_base.h  linear_allocator.cpp  linear_allocator.h  pool_allocator.cpp  pool_allocator.h
engine/temp/graphics/: device.cpp  device.h  fragment_shader.h  graphics.h  graphics_common.h  swap_chain.h  vertex_shader.h
engine/temp/graphics/opengl/: gl_common.cpp  gl_common.h  gl_device.cpp  gl_device.h
engine/temp/graphics/vulkan/: temp_vulkan.h  vk_device.cpp  vk_device.h  vk_fragment_shader.cpp  vk_fragment_shader.h  vk_swap_chain.cpp  vk_swap_chain.h  vk_utility.cpp  vk_utility.h  vk_vertex_shader.cpp  vk_vertex_shader.h
engine/temp/rendering/: model.h  renderer.cpp  renderer.h  renderer_base.h  rendering.h  swap_chain.h  swap_chain_base.h
engine/temp/rendering/vulkan/: temp_vulkan.h  vk_renderer.cpp  vk_renderer.h  vk_swap_chain.cpp  vk_swap_chain.h
engine/temp/resource/: fragment_shader.cpp  fragment_shader.h  resource.h  resource_base.cpp  resource_base.h  resource_manager.cpp  resource_manager.h  vertex_shader.cpp  vertex_shader.h
engine/temp/system/: application_base.h  system.h
engine/temp/system/mac/: mac_application.h  mac_application.mm  mac_utility.h  mac_utility.mm
engine/temp/system/windows/: windows_application.cpp  windows_application.h
experimental/: CMakeLists.txt
experimental/application/: application.h  main.cpp
experimental/application/windows/: windows_application.cpp
experimental/engine/: dllmain.cpp  temp.cpp  temp.h
experimental/engine/common/: container.h  define.h  type.h
experimental/engine/core/: thread_pool.h  thread_pool_detail.h
experimental/engine/temp/app/: application.h
experimental/engine/temp/common/: define.h  type.h
experimental/engine/temp/core/: core.h  logger.cpp  logger.h  thread_pool.h  thread_pool_detail.h
experimental/engine/temp/graphics/: device.h  graphics.h  graphics_common.h
experimental/source/: dllmain.cpp
experimental/source/temp/common/: common.h  container.h
experimental/source/temp/graphics/: device.h
experimental/test/: main.cpp
source/: .clang-format  CMakeLists.txt  dllmain.cpp  temp.cpp  temp.h
source/temp/: assert.h  container.h  define.h  filesystem.h  global_valiable.cpp  graphics_commpn.h  temp_assert.h  temp_math.h  type.h  utility.h
source/temp/app/: application.h
source/temp/app/windows/: windows_application.cpp
source/temp/asset/: asset_common.h  import.cpp  import.h
source/temp/asset/mac/: mac_image.h  mac_image.mm
source/temp/common/: container.h  format.h  type.h
source/temp/core/: allocator.h  filesystem.h  logger.cpp  logger.h  thread_pool.h
source/temp/graphics/: blend_state.cpp  blend_state.h  command_list.cpp  command_list.h  context.cpp  context.h  depth_stencile_state.cpp  depth_stencile_state.h  device.cpp  device.h  graphics.h  graphics_common.h  index_buffer.cpp  index_buffer.h  input_layout.cpp  input_layout.h  pixel_shader.cpp  pixel_shader.h  rasterizer_state.cpp  rasterizer_state.h  render_target.h  shader_program.h  texture.h  vertex_buffer.cpp  vertex_buffer.h  vertex_shader.cpp  vertex_shader.h
source/temp/graphics/d3d11/: device_impl_d3d11.cpp  device_impl_d3d11.h  pixel_shader_impl_d3d11.h  vertex_shader_impl_d3d11.cpp  vertex_shader_impl_d3d11.h
source/temp/graphics/opengl/: blend_state_impl_opengl.cpp  blend_state_impl_opengl.h  command_list_impl_opengl.cpp  command_list_impl_opengl.h  context_impl_opengl.cpp  context_impl_opengl.h  depth_stencile_state_impl_opengl.cpp  depth_stencile_state_impl_opengl.h  device_impl_opengl.cpp  device_impl_opengl.h  device_opengl.cpp  device_opengl.h  index_buffer_impl_opengl.cpp  index_buffer_impl_opengl.h  input_layout_impl_opengl.cpp  input_layout_impl_opengl.h  opengl_common.cpp  opengl_common.h  (+25 more)
source/temp/graphics_/: device.h  graphics_common.h  pixel_shader.h  render_target.h  texture.h  vertex_buffer.h  vertex_shader.h
source/temp/graphics_old/: blend_state.h  context.cpp  context.h  depth_stencile_state.cpp  depth_stencile_state.h  device.cpp  device.h  graphics_common.h  index_buffer.cpp  index_buffer.h  input_layout.cpp  pixel_shader.h  rasterizer_state.cpp  rasterizer_state.h  shader_program.h  vertex_buffer.h
source/temp/math/: constant.h  constants.h  math.h  matrix.h  matrix4x4.h  matrix_detail.h  quaternion.h  quaternion_detail.h  transform.h  transform_detail.h  vector.h  vector2.h  vector3.h  vector4.h  vector_detail.h
source/temp/render/: camera.cpp  camera.h  model.h  render.h  render_common.h  render_target.h  render_texture.h  renderer.cpp  renderer.h
source/temp/render_old/: camera.h  render.h  render_common.h  render_target.h  renderer.cpp  renderer.h
source/temp/renderer/: camera.cpp  camera.h  renderer.h
source/temp/resource/: graphics_device.cpp  graphics_device.h  loading_thread.cpp  loading_thread.h  material.cpp  material.h  mesh.cpp  mesh.h  pixel_shader.cpp  pixel_shader.h  pixel_shader_resource.cpp  pixel_shader_resource.h  resource.cpp  resource.h  resource_base.cpp  resource_base.h  resource_base_detail.h  resource_common.h  resource_manager.cpp  resource_manager.h  resource_object.cpp  resource_object.h  texture.cpp  texture.h  vertex_shader.cpp  vertex_shader.h  vertex_shader_resource.cpp  vertex_shader_resource.h
source/temp/resource_old/: mesh.cpp  mesh.h  pixel_shader.cpp  resource.cpp  resource.h  resource_base.h  resource_base_detail.h  resource_common.h  texture.cpp  texture.h
source/temp/scene_graph/: transform.h
source/temp/system/: application.h  file_system.cpp  file_system.h  logger.h  thread_pool.h  thread_pool_detail.h  timer.cpp  timer.h  window.h
test/: CMakeLists.txt  main.cpp  matrix4x4_text.cpp  quaternon_test.cpp  vector2_test.cpp  vector3_test.cpp
(+209 files in other folders)
