cmake_minimum_required(VERSION 3.0)

function(assign_source_group)
    foreach(_source IN ITEMS ${ARGN})
        if (IS_ABSOLUTE ${_source})
            file(RELATIVE_PATH _source_rel ${CMAKE_CURRENT_SOURCE_DIR} ${_source})
        else()
            set(_source_rel "${_source}")
        endif()
        get_filename_component(_source_path ${_source_rel} PATH)
        string(REPLACE "/" "\\" _source_path_proj "${_source_path}")
        string(CONCAT _source_path_proj "source\\" "${_source_path_proj}")
        source_group(${_source_path_proj} FILES ${_source})
    endforeach()
endfunction(assign_source_group)

project(tempura)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(boost_root "" CACHE PATH boost)
set(ENV{BOOST_ROOT} ${boost_root})
add_subdirectory(source)
add_subdirectory(test)
add_subdirectory(third_party/flatbuffers)
add_subdirectory(third_party/zlib)
add_subdirectory(third_party/libpng)