cmake_minimum_required(VERSION 3.12)

file(GLOB_RECURSE cpp RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE h RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE mm RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.mm)

if(APPLE)
    find_library( COCOA_LIBRARY Cocoa )
    find_library( OpenGL_LIBRARY OpenGL )
    find_library( IOKIT_LIBRARY IOKit )
    find_library( COREVIDEO_LIBRARY CoreVideo )
    set(EXTRA_LIBS ${COCOA_LIBRARY} ${OpenGL_LIBRARY} ${IOKIT_LIBRARY} ${COREVIDEO_LIBRARY})
    set(source_list ${cpp} ${h} ${mm})
    add_definitions("-Wall -std=c++14")
elseif(WIN32)
    set(source_list ${cpp} ${h})
    add_definitions("-W4")
    set(EXTRA_LIBS "OpenGL32.lib")
endif(APPLE)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories("${PROJECT_SOURCE_DIR}/third_party/fmt/include")
add_library(engine STATIC ${source_list})
target_link_libraries(engine ${EXTRA_LIBS})

set(TEMP_USE_BOOST ON CACHE BOOL "To use filesystem in a environment before c++17.")
if(TEMP_USE_BOOST)
    find_package(Boost COMPONENTS system filesystem) 
    if(Boost_FOUND)
        target_include_directories(engine PRIVATE ${Boost_INCLUDE_DIRS})
        message("${Boost_INCLUDE_DIRS}")
        target_link_libraries(engine ${Boost_LIBRARIES})
        add_definitions("-DTEMP_USE_BOOST")
    endif()
endif(TEMP_USE_BOOST)

add_source_group(${source_list})