cmake_minimum_required(VERSION 3.0)

file(GLOB_RECURSE test_cpp RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE test_h RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE test_mm RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.mm)
if(APPLE)
    set(test_source_list ${test_cpp} ${test_h} ${test_mm})
    add_definitions("-Wall -std=c++14")
elseif(WIN32)
    set(test_source_list ${test_cpp} ${test_h})
    add_definitions("-W4")
endif(APPLE)
add_executable(temp_test ${test_source_list})
target_include_directories(temp_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(temp_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../third_party/fmt/include)
add_dependencies(temp_test engine)
target_link_libraries(temp_test engine)

set(TEMP_USE_BOOST ON CACHE BOOL "To use filesystem in a environment before c++17.")
if(TEMP_USE_BOOST)
find_package(Boost COMPONENTS system filesystem) 
    if(Boost_FOUND)
        target_include_directories(temp_test PRIVATE ${Boost_INCLUDE_DIRS})
        target_link_libraries(temp_test ${Boost_LIBRARIES})
        add_definitions("-DTEMP_USE_BOOST")
    endif()
endif(TEMP_USE_BOOST)

assign_source_group(${test_source_list})