cmake_minimum_required(VERSION 3.12)

file(GLOB_RECURSE c RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
file(GLOB_RECURSE cpp RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE h RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
file(GLOB_RECURSE hpp RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.hpp)
file(GLOB_RECURSE mm RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.mm)

if(APPLE)
    find_library( COCOA_LIBRARY Cocoa )
    set(EXTRA_LIBS ${EXTRA_LIBS} ${COCOA_LIBRARY})
    find_library( OpenGL_LIBRARY OpenGL )
    set(EXTRA_LIBS ${EXTRA_LIBS} ${OpenGL_LIBRARY})
    find_library( IOKIT_LIBRARY IOKit )
    set(EXTRA_LIBS ${EXTRA_LIBS} ${IOKIT_LIBRARY})
    find_library( COREVIDEO_LIBRARY CoreVideo )
    set(EXTRA_LIBS ${EXTRA_LIBS} ${COREVIDEO_LIBRARY})
    find_library( VULKAN_LIBRARY NAMES vulkan PATHS $ENV{VULKAN_SDK}/Frameworks)
    set(EXTRA_LIBS ${EXTRA_LIBS} ${VULKAN_LIBRARY})
    set(source_list ${c} ${cpp} ${h} ${hpp} ${mm})
    add_definitions("-Wall -std=c++14")
elseif(WIN32)
    set(source_list ${c} ${cpp} ${h} ${hpp})
    add_definitions("-W4")
    set(EXTRA_LIBS ${EXTRA_LIBS} "OpenGL32.lib")
    find_package(Vulkan REQUIRED)
    include_directories(temp_test PRIVATE Vulkan::Vulkan)
    set(EXTRA_LIBS ${EXTRA_LIBS} Vulkan::Vulkan)
endif(APPLE)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/engine)
include_directories(${PROJECT_SOURCE_DIR}/third_party/fmt/include)
add_executable(temp_test ${source_list})
add_dependencies(temp_test engine)
target_link_libraries(temp_test engine)
target_link_libraries(temp_test ${EXTRA_LIBS})

set(TEMP_USE_BOOST ON CACHE BOOL "To use filesystem in a environment before c++17.")
if(TEMP_USE_BOOST)
    find_package(Boost COMPONENTS system filesystem) 
    if(Boost_FOUND)
        target_include_directories(temp_test PRIVATE ${Boost_INCLUDE_DIRS})
        message("${Boost_INCLUDE_DIRS}")
        target_link_libraries(temp_test ${Boost_LIBRARIES})
        add_definitions("-DTEMP_USE_BOOST")
    endif()
endif(TEMP_USE_BOOST)

add_source_group(${source_list})